@@ -1263,29 +1263,20 @@ decl_stmt|;
 comment|// Map (String matcherName -> Matcher)
 specifier|private
 name|Map
-name|_variables
+name|_reportOutputters
 init|=
 operator|new
 name|HashMap
 argument_list|()
 decl_stmt|;
+comment|// Map (String outputterName -> ReportOutputter)
 specifier|private
-name|ReportOutputter
-index|[]
-name|_reportOutputters
+name|Map
+name|_variables
 init|=
 operator|new
-name|ReportOutputter
-index|[]
-block|{
-operator|new
-name|LogReportOutputter
+name|HashMap
 argument_list|()
-block|,
-operator|new
-name|XmlReportOutputter
-argument_list|()
-block|}
 decl_stmt|;
 specifier|private
 name|String
@@ -1667,6 +1658,20 @@ argument_list|(
 name|GlobPatternMatcher
 operator|.
 name|getInstance
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addReportOutputter
+argument_list|(
+operator|new
+name|XmlReportOutputter
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addReportOutputter
+argument_list|(
+operator|new
+name|LogReportOutputter
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -4225,6 +4230,110 @@ name|m
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|addConfigured
+parameter_list|(
+name|ReportOutputter
+name|outputter
+parameter_list|)
+block|{
+name|addReportOutputter
+argument_list|(
+name|outputter
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|ReportOutputter
+name|getReportOutputter
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+operator|(
+name|ReportOutputter
+operator|)
+name|_reportOutputters
+operator|.
+name|get
+argument_list|(
+name|name
+argument_list|)
+return|;
+block|}
+specifier|public
+name|void
+name|addReportOutputter
+parameter_list|(
+name|ReportOutputter
+name|outputter
+parameter_list|)
+block|{
+if|if
+condition|(
+name|outputter
+operator|instanceof
+name|IvyAware
+condition|)
+block|{
+operator|(
+operator|(
+name|IvyAware
+operator|)
+name|outputter
+operator|)
+operator|.
+name|setIvy
+argument_list|(
+name|this
+argument_list|)
+expr_stmt|;
+block|}
+name|_reportOutputters
+operator|.
+name|put
+argument_list|(
+name|outputter
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|outputter
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|ReportOutputter
+index|[]
+name|getReportOutputters
+parameter_list|()
+block|{
+return|return
+operator|(
+name|ReportOutputter
+index|[]
+operator|)
+name|_reportOutputters
+operator|.
+name|values
+argument_list|()
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|ReportOutputter
+index|[
+name|_reportOutputters
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+return|;
+block|}
 comment|/////////////////////////////////////////////////////////////////////////
 comment|//                         CHECK
 comment|/////////////////////////////////////////////////////////////////////////
@@ -5950,16 +6059,6 @@ name|getArtifactReport
 argument_list|(
 name|artifact
 argument_list|)
-return|;
-block|}
-specifier|public
-name|ReportOutputter
-index|[]
-name|getReportOutputters
-parameter_list|()
-block|{
-return|return
-name|_reportOutputters
 return|;
 block|}
 comment|/**      * Resolve the dependencies of a module without downloading corresponding artifacts.      * The module to resolve is given by its ivy file URL. This method requires      * appropriate configuration of the ivy instance, especially resolvers.      *       * @param ivySource url of the ivy file to use for dependency resolving      * @param confs an array of configuration names to resolve - must not be null nor empty      * @param cache the cache to use - default cache is used if null      * @param date the date to which resolution must be done - may be null      * @return an array of the resolved dependencies      * @throws ParseException if a parsing problem occured in the ivy file      * @throws IOException if an IO problem was raised during ivy file parsing      */
