@@ -35,6 +35,22 @@ interface|interface
 name|ReportOutputter
 block|{
 specifier|public
+specifier|static
+specifier|final
+name|String
+name|CONSOLE
+init|=
+literal|"console"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|XML
+init|=
+literal|"xml"
+decl_stmt|;
+specifier|public
 specifier|abstract
 name|void
 name|output
@@ -45,6 +61,12 @@ parameter_list|,
 name|File
 name|destDir
 parameter_list|)
+function_decl|;
+specifier|public
+specifier|abstract
+name|String
+name|getName
+parameter_list|()
 function_decl|;
 block|}
 end_interface
