@@ -41,6 +41,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -142,6 +152,34 @@ operator|.
 name|parser
 operator|.
 name|ModuleDescriptorParserRegistry
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|report
+operator|.
+name|ReportOutputter
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|report
+operator|.
+name|ResolveReport
 import|;
 end_import
 
@@ -1863,6 +1901,67 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testOutputter
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|XmlIvyConfigurationParser
+name|parser
+init|=
+operator|new
+name|XmlIvyConfigurationParser
+argument_list|(
+name|ivy
+argument_list|)
+decl_stmt|;
+name|parser
+operator|.
+name|parse
+argument_list|(
+name|XmlIvyConfigurationParserTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivyconf-outputter.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//System.out.println(Arrays.asList(ivy.getReportOutputters()));
+name|ReportOutputter
+name|testOutputter
+init|=
+name|ivy
+operator|.
+name|getReportOutputter
+argument_list|(
+literal|"test"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|testOutputter
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|testOutputter
+operator|instanceof
+name|MyOutputter
+argument_list|)
+expr_stmt|;
+block|}
 specifier|private
 name|void
 name|configureURLHandler
@@ -1916,6 +2015,35 @@ argument_list|(
 name|dispatcher
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+specifier|static
+class|class
+name|MyOutputter
+implements|implements
+name|ReportOutputter
+block|{
+specifier|public
+name|void
+name|output
+parameter_list|(
+name|ResolveReport
+name|report
+parameter_list|,
+name|File
+name|destDir
+parameter_list|)
+block|{
+block|}
+specifier|public
+name|String
+name|getName
+parameter_list|()
+block|{
+return|return
+literal|"test"
+return|;
+block|}
 block|}
 block|}
 end_class
